# sherlock

./: +  .gitignore  :w  Cargo.toml  DOCS.md  LICENSE  PKGBUILD  README.md  TODO.md  build.rs  flake.nix  notes.md  packager.sh  resources.gresources  rust-toolchain.toml  rustc-ice-2025-05-08T18_35_03-627185.txt  rustc-ice-2025-05-08T18_35_03-627186.txt  ü
.cargo/: config.toml
.github/: CONTRIBUTING.md  labeler.yml
docs/: README.md  aliases.md  config.md  errors.md  flags.md  getting-started.md  launchers.md  notes.md  sherlockignore.md
nix/: home-manager.nix
resources/: emojies.json  fallback.json  main.css  resources.gresources.xml
sherlock_macro/: Cargo.toml
src/: Cargo.toml  PKGBUILD  README.md  lock.rs  main.rs  prelude.rs
src/actions/: applaunch.rs  commandlaunch.rs  mod.rs  teamslaunch.rs  util.rs  websearch.rs
src/api/: api.rs  call.rs  mod.rs  server.rs
src/application/: lock.rs  mod.rs  util.rs
src/components/: launchers.rs  mod.rs  views.rs
src/daemon/: daemon.rs  deamon.rs  mod.rs
src/g_subclasses/: mod.rs
src/g_subclasses/action_entry/: imp.rs  mod.rs
src/g_subclasses/emoji_item/: imp.rs  mod.rs
src/g_subclasses/lazy_model/: mod.rs
src/g_subclasses/sherlock_input/: imp.rs  mod.rs
src/g_subclasses/sherlock_row/: imp.rs  mod.rs
src/helpers/: config_loader.rs  mod.rs
src/launcher/: app_launcher.rs  audio_launcher.rs  bookmark_launcher.rs  bulk_text_launcher.rs  calc_launcher.rs  category_launcher.rs  clipboard_launcher.rs  emoji_picker.rs  event_launcher.rs  file_launcher.rs  get_api_launcher.rs  mod.rs  modular_event_launcher.rs  process_launcher.rs  system_cmd_launcher.rs  theme_picker.rs  utils.rs  weather_launcher.rs  web_launcher.rs
src/loader/: application_loader.rs  config_loader.rs  css_loader.rs  flag_loader.rs  icon_loader.rs  launcher_loader.rs  mod.rs  pipe_loader.rs  resource_loader.rs  util.rs
src/resources/: fallback.json  main.css
src/resources/ui/: search.ui
src/src/: main.rs
src/src/actions/: applaunch.rs  commandlaunch.rs
src/src/launcher/: app_launcher.rs  calc_launcher.rs
src/src/loader/: flag_loader.rs  icon_loader.rs  launcher_loader.rs  util.rs
src/src/ui/: util.rs
src/src/ui/tiles/: calc.rs
src/ui/: context.rs  error_view.rs  input_window.rs  key_actions.rs  mod.rs  search.rs  user.rs  util.rs  window.rs
src/ui/tiles/: app.rs  app_tile.rs  bulk_text.rs  bulk_text_tile.rs  calc.rs  calc_tile.rs  clipboard_tile.rs  error.rs  error_tile.rs  event_tile.rs  mod.rs  mpris_tile.rs  pipe_tile.rs  process_tile.rs  simple_text_tile.rs  util.rs  weather_tile.rs  web.rs  web_tile.rs
src/utils/: config.rs  errors.rs  files.rs  logging.rs  mod.rs
themes/: README.md  gruvbox.css  (+2 more)
(+43 files in other folders)
