[package]
name = "sherlock"
authors = ["Sebastian Kootz"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

build = "build.rs"

[dependencies]
cli-clipboard = "0.4.0"
gio = "0.20.7"
glob = "0.3.2"
gtk4 = "^0.9.5"
gtk4-layer-shell = "0.4.0"
meval = "0.2.0"
once_cell = "1.20.2"
open = "5.3.2"
rayon = "1.10.0"
regex = "1.11.1"
serde = {version = "1.0.217", features=["derive"]}
serde_json = "1.0.134"
surf = "2.3.2"
tokio = {version = "1.43.0", features=["full"]}
toml = "0.8.19"
wayland-protocols = "0.32.5"

[package.metadata]
assets = ["resources/*"]

[profile.release]
opt-level = 3 
lto = "fat"
panic = 'abort'

[dev-dependencies]
criterion = "0.3"

